--- a/themes/basic/layouts/index.html
+++ b/themes/basic/layouts/index.html
@@ -1,3 +1,10 @@
 {{ define "main" }}
+
   {{ .Content }}
+
+  {{ range first 1 (where .Site.RegularPages "Type" "in" "projects").ByDate.Reverse }}
+    <h2>{{ .Title }}</h2>
+    {{ .Content }}
+  {{ end }}
+
 {{ end }}
