--- a/themes/basic/static/css/style.css
+++ b/themes/basic/static/css/style.css
@@ -25,4 +25,16 @@ nav > a {
   nav {
     flex-direction: row;
   }
+
+  .project-container {
+    display: flex;
+  }
+
+  .project-list {
+    width: 20%;
+  }
+
+  .project {
+    flex: 1;
+  }
 }
